0032712: Visualization, OpenGl_Context.hxx - avoid including OpenGL headers