src/OpenGl/OpenGl_IndexBuffer.cxx
@@ -15,6 +15,7 @@
 #include <OpenGl_IndexBuffer.hxx>
 
 #include <OpenGl_Context.hxx>
+#include <OpenGl_GlCore15.hxx>
 #include <Standard_Assert.hxx>
 
 IMPLEMENT_STANDARD_RTTIEXT(OpenGl_IndexBuffer, OpenGl_Buffer)
